--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MovieTrak</title>
+    <title>VideoTrak</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Movie<span class="thin">Trak</span></a>
+        <a class="navbar-brand" href="/">Video<span class="thin">Trak</span></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
