--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,7 +2,8 @@
 	<div class="col-xs-12">
 		<h2 class="white">New Customer</h2>
 		<hr> 
-
+	</div>
+	<div class="col-xs-6">
 		<%= form_for @customer, class: 'hortizontal-form' do |c| %>
 			
 			<div class="form-group">
@@ -22,7 +23,7 @@
 				<%= c.text_field :telephone, class: 'form-control' %>
 			</div>
 			<div class="form-group">
-				<%= c.submit %>
+				<%= c.submit class: 'button' %>
 			</div>
 		<% end %> 
 		<br />
