--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
-	<div class="col-xs-12 col-lg-10 col-lg-push-1">
+	<div class="col-xs-12">
 		<h2 class="white">Customers</h2>
 		<hr />
+	</div>
+	<div class="col-xs-12 col-md-6">
 		<h4 class="white">Add New Customer</h4>
 		<%= form_for @customer, class: 'form-horizontal' do |m| %>
 			<div class="form-group">
@@ -22,7 +24,7 @@
 			</div>
 			<div class="form-group">
 				<%= m.submit class: 'button' %> 
-			<div class="form-group">
+			</div>
 		<% end %>
 		<br />
 	</div>	
