background location altered

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
 $nav: #3a3a3a; 
 
 body { 
-    background-image: url('https://s3-us-west-2.amazonaws.com/videotrak/background.jpg');
+    background-image: image-url('background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
