Login views styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,9 @@ nav {
 	color: white !important;
 	border-radius: 5px !important;
 }
+.devise {
+	padding-top: 50px; 
+}
 .grey {
 	color: #adadad !important;
 	text-decoration: underline;
