--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
  <div class="row"> 
-  <div class="col-xs-10 col-xs-push-1">
+  <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-3 devise">
     <h2 class="white">Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
