--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,7 @@ nav {
 }
 .devise {
 	padding-top: 50px; 
+	padding-bottom: 200px;
 }
 .grey {
 	color: #adadad !important;
@@ -61,6 +62,10 @@ nav {
 }
 .icon-bar {
 	background: white !important; 
+}
+.large_logo {
+	font-size: 60px !important; 
+	margin-bottom: 30px; 
 }
 .navbar {
 	padding: 10px;
@@ -99,5 +104,9 @@ nav {
 	color: white !important;
 }
 
-
+@media screen and (max-width: 900px) {
+	.devise {
+		padding-top: 30px; 
+	}
+}
 
