--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$nav: #3a3a3a; 
+$nav: #2e2e2e; 
 
 body { 
     background-image: image-url('background.jpg');
